Admin registration and login ready

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
           You are not authorized to access this page yet.
         </div>
       }
-      <button type="button" class="btn btn-secondary btn-block">Register</button>
+      <button type="button" class="btn btn-secondary btn-block" (click)="navigateToRegisterMenu()">Register</button>
     </form>
   </div>
 </div>
