--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <a
       role="button"
       class="navbar-brand ms-3"
-      routerLink="">
+      routerLink="/admin-dashboard">
       Meical Care App
     </a>
   
@@ -21,7 +21,7 @@
         <mat-icon
           role="button"
           class="icon-link-hover"
-          routerLink="login">
+          routerLink="/login">
           login
         </mat-icon>
       </span>
