--- a/src/app/register-admin/register-admin.component.html
+++ b/src/app/register-admin/register-admin.component.html
@@ -53,7 +53,7 @@
           }
         </mat-form-field>
 
-        <button mat-flat-button color="primary" class="btn btn-primary mt-3" [disabled]="form.invalid" (click)="onSubmit(form.value)">Register</button>
+        <button mat-flat-button color="primary" [disabled]="form.invalid" (click)="onSubmit(form.value || isSubmitting)">Register</button>
       </form>
 
   } @else {
