Update dependencies and fix component positions

--- a/src/app/components/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/components/doctor-dashboard/doctor-dashboard.component.html
@@ -3,7 +3,7 @@
   <div class="row no-gutters">
     <div class="col-md-2 fixed-sidebar bg-dark text-white">
       <div class="sidebar-content">
-        <app-app-list-admin></app-app-list-admin>
+        <app-app-list-doctor></app-app-list-doctor>
       </div>
     </div>
     <div class="col-md-10 offset-md-2">
