Update component styles and navigation links

--- a/src/app/components/app-list-admin/app-list-admin.component.css
+++ b/src/app/components/app-list-admin/app-list-admin.component.css
@@ -2,3 +2,8 @@
     color: red; /* Change this to the color you want */
     background-color: yellow; /* Optionally change the background color */
   }
+
+  .list-group {
+    width: 280px;
+    margin-top: 20px; 
+  }
